<resources>
    <string name="app_name">PopularMovies</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search movies.. </string>
    <string name="searchQuery">Search Query</string>
    <string name="search_button">Search Button</string>
    <string name="search_label">Search Label</string>

    <string name="empty_view_title_text">No Favorites here..</string>
    <string name="empty_view_subtitle_text">Get started by adding Favorites</string>

    <string name="editor_insert_favorite_successful">Favorite saved</string>

    <string name="editor_insert_favorite_failed">Error with saving Favorite</string>

    //For drawer_view (Navigation drawer) menu item

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_Search">Search</string>
    <string name="navigation_PopularMovie">Popular Movies</string>
    <string name="navigation_TopRatedMovie">Top Rated Movies</string>
    <string name="navigation_NowPlayingMovie">Now Playing Movies</string>
    <string name="navigation_UpcomingMovie">Upcoming Movies</string>
    <string name="navigation_FavoriteMovie">Favorite Movies</string>

    <string name="theMovieDb">The Movie Db (TMDb)</string>

    //For activity main drawer

    <string name="nav_search">Search Movies...</string>
    <string name="nav_popularMovie">Popular Movies</string>
    <string name="nav_topRatedMovie">Top Rated Movies</string>
    <string name="nav_nowPlayingMovie">Now Playing Movies</string>
    <string name="nav_upcomingMovie">Upcoming Movies</string>
    <string name="nav_favoriteMovie">Favorite Movies</string>

    <!-- Error messages-->
    <string name="detail_error_message">Movie detail not available</string>

    //For detail activity

    <string name="posterPath">PosterPath</string>

    <string name="backdropPath">BackdropPath</string>

    <string name="original_title">Original Title</string>

    <string name="release_date">Release Date</string>

    <string name="AverageRating">Average Rating:</string>

    <string name="vote_average">8.32</string>

    <string name="overview">Overview</string>

    <string name="movieId">Movie Id</string>

    <string name="detail_delete_favorite_successful">Favorite deleted</string>

    <string name="detail_delete_favorite_failed">Error with deleting favorite</string>

    <string name="action_share">Share</string>

    //For Videos

    <string name="videos">Videos</string>

    <string name="player_error">Error initializing YouTube player: %s</string>

    <string name="youtubeVideoImage">Youtube Video Image</string>

    <string name="name">Name</string>

    <string name="type">Type</string>

    <string name="site">YouTube</string>

    <string name="iso_3166_1">US</string>

    <string name="iso_639_1">en</string>

    <string name="key">Key</string>

    //For Reviews

    <string name="reviews">Reviews</string>

    <string name="authorBase">A review by</string>

    <string name="author">Author</string>

    <string name="content">Content</string>

    <string name="url">Url</string>

</resources>
